--- a/index.html
+++ b/index.html
@@ -113,6 +113,30 @@
           </div>
          </section>
          <!-- Habits section end -->
+
+         <!-- Run an Extra start -->
+          <section>
+            <div class="run-mein">
+              <div class="run-left-site">
+                 <h1>Run an Extra <br style="padding: 10px;"> Mile Easily</h1>
+                 <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                 <button class="">Join Now</button>
+              </div>
+              <div class="run-right-site">
+                <img src="./images/run.jpg" alt="">
+              </div>
+            </div>
+          </section>
+         <!-- Run an Extra end -->
+
+         <!-- Trainings and Exercises start -->
+         <section>
+            <div>
+            <h1>Trainings and Exercises</h1>
+            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            <div></div>
+            </div>
+         </section>
     </div>
 </body>
 </html>
