--- a/index.html
+++ b/index.html
@@ -134,9 +134,12 @@
             <div>
             <h1>Trainings and Exercises</h1>
             <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
-            <div></div>
+            <div>
+
+            </div>
             </div>
          </section>
+          <!-- Trainings and Exercises end -->
     </div>
 </body>
 </html>
