--- a/index.html
+++ b/index.html
@@ -131,15 +131,80 @@
 
          <!-- Trainings and Exercises start -->
          <section>
-            <div>
+            <div class="trainings">
             <h1>Trainings and Exercises</h1>
             <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
-            <div>
+            <div class="">
+            <div class="imageTop">
+                <div class="image1"></div>
+                <div class="image2"></div>
+                <div class="image3"></div>
+            </div>
+            <div class="imageTop">
+                <div class="image4"></div>
+                <div class="image5"></div>
+                <div class="image6"></div>
+            </div>
 
             </div>
             </div>
          </section>
           <!-- Trainings and Exercises end -->
+
+          <!-- BMI Calculator start -->
+           <section>
+            <div class="BMI-Calculator">
+                <h1>BMI Calculator</h1>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="BMI">
+                <div class="bmi">
+                    <div class="bmi-left">
+                        <h3>BMI Calculator Chart</h3>
+                           <table class="bmi-table">
+                               <thead>
+                                   <tr>
+                                       <th>Category</th>
+                                       <th>BMI Range</th>
+                                   </tr>
+                               </thead>
+                               <tbody>
+                                   <tr>
+                                       <td>Underweight</td>
+                                       <td>&lt; 18.5</td>
+                                   </tr>
+                                   <tr>
+                                       <td>Normal weight</td>
+                                       <td>18.5–24.9</td>
+                                   </tr>
+                                   <tr>
+                                       <td>Overweight</td>
+                                       <td>25–29.9</td>
+                                   </tr>
+                                   <tr>
+                                       <td>Obesity</td>
+                                       <td>&gt; 30</td>
+                                   </tr>
+                               </tbody>
+                           </table>
+                       </div>
+                    
+                       <div class="bmi-right">
+                           <h3>Calculate your BMI</h3>
+                           <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
+
+                           <div>
+                            <div class="inputText">
+                                <input type="text" placeholder="Height/cm">
+                                <input type="text" placeholder="Weight/kg">
+                            </div>
+                           </div>
+                       </div>
+                    </div>
+                </div>
+            </div>
+           </section>
+          <!-- BMI Calculator end -->
     </div>
 </body>
 </html>
